# polster-cli-grok

./: .gitignore  LICENSE  README.md  cloud-setup-guide.md  generate_presentation.py  polster_presentation.pptx  pyproject.toml  test.md
docs/: repo-diary.md
docs/connectors/: api-guide.md  connectors.py.template  integration.md  mysql-guide.md  sftp-guide.md
my_test_project/: .env.example  .gitignore  README.md  pyproject.toml  run_dagster.py
my_test_project/src/core/: paths.py  settings.py  storage.py
my_test_project/src/orchestration/: __init__.py  definitions.py  utils.py
my_test_project/src/orchestration/assets/silver/: __init__.py
src/polster/: __init__.py  cli.py  launcher.py
src/polster/templates/assets/: core_bronze.py  core_gold.py  core_silver.py  orch_bronze.py  orch_gold.py  orch_silver.py
src/polster/templates/cicd/: azure-pipelines.yml  github-workflow.yml  gitlab-ci.yml
src/polster/templates/project/: .env.example  .gitignore  README.md  pyproject.toml  run_dagster.py  run_polster.py
src/polster/templates/project/src/: __init__.py
src/polster/templates/project/src/core/: __init__.py  bronze_example.py  gold_example.py  paths.py  settings.py  silver_example.py  storage.py
src/polster/templates/project/src/orchestration/: definitions.py  utils.py
src/polster/templates/project/src/orchestration/assets/: __init__.py
src/polster/templates/project/src/orchestration/assets/bronze/: __init__.py  run_bronze_example.py
src/polster/templates/project/src/orchestration/assets/gold/: __init__.py  run_gold_example.py
src/polster/templates/project/src/orchestration/assets/silver/: __init__.py  run_silver_example.py
