[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polster"
version = "0.1.0"
description = "CLI tool for generating Polster data orchestration projects"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Polster CLI", email = "cli@polster.dev"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
polster = "polster.launcher:main"

[project.urls]
Homepage = "https://github.com/polster/polster-cli"
Repository = "https://github.com/polster/polster-cli"
Issues = "https://github.com/polster/polster-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/polster"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [
    "src/polster/templates/**/*.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]