[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{PROJECT_NAME}}"
version = "0.1.0"
description = "Polster data orchestration project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.8.0",
    "dagster-webserver>=1.8.0",
    "polars>=1.8.0",
    "faker>=25.0.0",
    "azure-storage-file-datalake>=12.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.dagster]
module_name = "src.orchestration.definitions"
code_location_name = "{{PROJECT_NAME}}"